add resources