@@ -3,62 +3,71 @@
 	<groupId>com.wallissoftware</groupId>
 	<artifactId>gwt-unzip</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	
 
 
-<properties>
-	<gwt.version>2.6.1</gwt.version>
-	<target.jdk>1.7</target.jdk>
-	<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-</properties>
 
-<build>
-	<plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>${maven-compiler-plugin.version}</version>
-			<configuration>
-				<source>${target.jdk}</source>
-				<target>${target.jdk}</target>
-				<encoding>${project.build.sourceEncoding}</encoding>
-				<proc>none</proc>
-			</configuration>
-		</plugin>
+	<properties>
+		<gwt.version>2.6.1</gwt.version>
+		<target.jdk>1.7</target.jdk>
+		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>gwt-maven-plugin</artifactId>
+
+
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.java</include>
+					<include>**/*.gwt.xml</include>
+				</includes>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<source>${target.jdk}</source>
+					<target>${target.jdk}</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+					<proc>none</proc>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>gwt-maven-plugin</artifactId>
+				<version>${gwt.version}</version>
+				<configuration>
+					<strict>true</strict>
+					<modules>
+						<module>com.wallissoftware.zip.Zip</module>
+
+					</modules>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+
+
+	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-user</artifactId>
 			<version>${gwt.version}</version>
-			<configuration>
-				<strict>true</strict>
-				<extraJvmArgs>-Xss1024k -Xmx1024m -XX:MaxPermSize=256m</extraJvmArgs>
-				<enableClosureCompiler>true</enableClosureCompiler>
-				<modules>
-					<module>com.wallissoftware.zip.Zip</module>
-
-				</modules>
-			</configuration>
-			<executions>
-				<execution>
-					<goals>
-						<goal>compile</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin>
-	</plugins>
-
-
-</build>
-
-<dependencies>
-	<dependency>
-		<groupId>com.google.gwt</groupId>
-		<artifactId>gwt-user</artifactId>
-		<version>${gwt.version}</version>
-	</dependency>
-</dependencies>
+		</dependency>
+	</dependencies>
 </project>
 
